--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   http: ^0.12.0+2
   provider: ^3.2.0
   dio: ^3.0.10
-  shared_preferences: ^2.0.5
+  flutter_secure_storage: ^4.1.0
 
 dev_dependencies:
   flutter_test:
