--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^3.2.0
   dio: ^3.0.10
   flutter_secure_storage: ^4.1.0
+  mockito: ^5.0.0
 
 dev_dependencies:
   flutter_test:
